Work in Progress. (#1161)
* Work in Progress.

* Create, Live, thumbnail endpoints will work for unfinished projects only.

* Only start unfinished camera's snapmails.

* Use atom :project_finished instead of string.

* Still work in progress.

* Removed enum value confusion, only string values and no atoms.

* Fixed camera worker && Kill process for a project_finished camera.

* Use camera_exid instead of exid.

* Updated swagger file.

* Fixed Travis tests.

* Dont update CR settings if project has been finished.

* Switch to master branch for evercam_models.

* Added a quick fix for mobile application.
