# lib/evercam_media_web/controllers/cloud_recording_controller.ex
@@ -155,7 +155,8 @@ defmodule EvercamMediaWeb.CloudRecordingController do
 
     with :ok <- ensure_camera_exists(camera, exid, conn),
          :ok <- ensure_can_edit(current_user, camera, conn),
-         :ok <- validate_params(params) |> ensure_params(conn)
+         :ok <- validate_params(params) |> ensure_params(conn),
+         :ok <- project_not_finished(camera.status, camera.name, conn)
     do
       cr_params = %{
         camera_id: camera.id,
@@ -546,6 +547,9 @@ defmodule EvercamMediaWeb.CloudRecordingController do
       Logger.error Exception.format_stacktrace System.stacktrace
     end
   end
+
+  defp project_not_finished("project_finished", camera_name, conn), do: render_error(conn, 410, "Project '#{camera_name}' has been finished, you cannot edit it's cloud recordings.")
+  defp project_not_finished(_status, _camera_name, _conn), do: :ok
 
   defp ensure_camera_exists(nil, exid, conn) do
     render_error(conn, 404, "Camera '#{exid}' not found!")
