# lib/evercam_media_web/views/camera_view.ex
@@ -47,7 +47,8 @@ defmodule EvercamMediaWeb.CameraView do
       last_polled_at: Util.ecto_datetime_to_unix(camera.last_polled_at),
       last_online_at: Util.ecto_datetime_to_unix(camera.last_online_at),
       is_online_email_owner_notification: is_send_notification?(camera.alert_emails, user),
-      is_online: camera.is_online,
+      status: camera.status,
+      is_online: (if camera.status == "online", do: true, else: false),
       is_public: camera.is_public,
       offline_reason: Util.get_offline_reason(camera.offline_reason),
       discoverable: camera.discoverable,
@@ -79,7 +80,8 @@ defmodule EvercamMediaWeb.CameraView do
       last_polled_at: Util.datetime_to_iso8601(camera.last_polled_at, Camera.get_timezone(camera)),
       last_online_at: Util.datetime_to_iso8601(camera.last_online_at, Camera.get_timezone(camera)),
       is_online_email_owner_notification: is_send_notification?(camera.alert_emails, user),
-      is_online: camera.is_online,
+      status: camera.status,
+      is_online: (if camera.status == "online", do: true, else: false),
       is_public: camera.is_public,
       offline_reason: Util.get_offline_reason(camera.offline_reason),
       discoverable: camera.discoverable,
